# CenterTrack_caffe

./: .gitignore  CMakeLists.txt  README.md
include/: centerTrack.h  tracker.h  util.h
src/: centerTrack.cpp  main.cpp  tracker.cpp  util.cpp
